# rag-learning

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  workflow-summary.html
data/evaluation/: report.json  test_queries.yaml
data/vectorstore/: bm25_index.pkl  chunks.pkl
docs/: CHANGELOG.md  evaluation.html  generation.html  langfuse-integration.md  preprocess.html  rag-architecture.md  rag-resume-project-summary.md  rag-resume.md  retrieval.html  rewriting.html  功能实现说明_LangChain重构.md  功能实现说明_v1.0.md  功能实现说明_v1.1.md  功能实现说明_v1.2.md
scripts/: evaluate.py  generate_report.py
shared/: __init__.py  tokenizer.py
shared/evaluation/: __init__.py  config.py  dataset.py  evaluator.py  reporter.py
src/: config.py
src/evaluation/: __init__.py  config.py  dataset.py  evaluator.py  reporter.py
src/generation/: __init__.py  base.py  llm_generator.py  pipeline.py  template.py
src/preprocess/: __init__.py  config.py  indexer.py  splitter.py
src/retrieval/: __init__.py  diversity.py  filters.py  hybrid.py  reranker.py
src/rewriting/: __init__.py  intent.py  llm_intent.py  rewriter.py
src_langchain/: __init__.py  config.py  pipeline.py  tracing.py
src_langchain/generation/: __init__.py  base.py  llm_chain.py  prompts.py  template_chain.py
src_langchain/preprocess/: __init__.py  indexer.py  loader.py  splitter.py
tests/: conftest.py  test_app.py  test_evaluation.py  test_pipeline.py  test_preprocess.py  test_reranker.py  test_retrieval.py  test_rewriting.py  test_smoke.py  test_streaming.py
(+13 files in other folders)
