[project]
name = "recipe-rag"
version = "0.1.0"
description = "食谱 RAG 智能问答系统 — 基于混合检索 + LLM 生成的中文食谱问答"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=5.0",
    "numpy",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "openai>=1.0.0",
    "gradio>=5.0.0",
    "ragas>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "datasets>=3.0.0",
    "pyyaml>=6.0",
    "langfuse>=2.0.0",
    "transformers<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-benchmark>=5.2",
]

[tool.uv]
package = false
